--- a/index.html
+++ b/index.html
@@ -2,4 +2,4 @@
 layout: default
 ---
 
-<p>Welcome to the CF-MAP project, an effort focused on high-quality expert-community-driven description of cystic fibrosis mechanisms and building a predictive computational model based on this description.</p>
+<p>Welcome to the CF-MAP project, an effort focused on high-quality description of cystic fibrosis mechanisms and building a predictive computational model based on this description.</p>
