--- a/index.html
+++ b/index.html
@@ -2,4 +2,7 @@
 layout: default
 ---
 
-<p>Welcome to the CF-MAP project, an effort focused on high-quality description of cystic fibrosis mechanisms and building a predictive computational model based on this description.</p>
+<p style="font-size:110%;">Welcome to the Cystic Fibrosis Map project (CF-MAP), an effort focused on high-quality description of cystic fibrosis mechanisms and building a predictive computational model based on this description.</p>
+
+<p>UPCOMING EVENT: The 3rd Disease Maps Community Meeting (DMCM2018) is scheduled 21-22 June 2018 in Paris. CF-MAP talk at DMCM2018: “Towards a molecular map of cystic fibrosis mechanisms”.</p>
+
