--- a/index.html
+++ b/index.html
@@ -4,5 +4,8 @@ layout: default
 
 <p style="font-size:110%;">Welcome to the Cystic Fibrosis Map project (CF-MAP), an effort focused on high-quality description of cystic fibrosis mechanisms and building a predictive computational model based on this description.</p>
 
-<p style="font-size:110%;">UPCOMING EVENT: The <a href="/events/3rdCommunityMeeting">3rd Disease Maps Community Meeting</a> (DMCM2018) is scheduled 21-22 June 2018 in Paris. CF-MAP talk at DMCM2018: “Towards a molecular map of cystic fibrosis mechanisms”.</p>
+<p>UPCOMING EVENT: The <a href="/events/3rdCommunityMeeting">3rd Disease Maps Community Meeting</a> (DMCM2018) is scheduled 21-22 June 2018 in Paris. CF-MAP talk at DMCM2018: “Towards a molecular map of cystic fibrosis mechanisms”.</p>
 
+<h1> Publication highlight </h1>
+
+<p>Text</p>
