--- a/index.html
+++ b/index.html
@@ -8,4 +8,4 @@ layout: default
 
 <h1> Publication highlight </h1>
 
-<p>Text</p>
+<p>Farinha CM, Canato S. From the endoplasmic reticulum to the plasma membrane: mechanisms of CFTR folding and trafficking. Cell Mol Life Sci. 2017 Jan;74(1):39-55. doi: <a href="http://dx.doi.org/10.1007/s00018-016-2387-7">10.1007/s00018-016-2387-7</a>. Epub 2016 Oct 3. Review. PubMed PMID: 27699454</p>
