--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@ layout: default
 
 <p>UPCOMING EVENT: The <a href="/events/3rdCommunityMeeting">3rd Disease Maps Community Meeting</a> (DMCM2018) is scheduled 21-22 June 2018 in Paris. CF-MAP talk at DMCM2018: “Towards a molecular map of cystic fibrosis mechanisms”.</p>
 
-<h1> Publication highlight </h1>
+
+<h1>Pathway highlight: normal CFTR function</h1>
+
+
+
+<h1>Publication highlight</h1>
 
 <p>Farinha CM, Canato S. From the endoplasmic reticulum to the plasma membrane: mechanisms of CFTR folding and trafficking. Cell Mol Life Sci. 2017 Jan;74(1):39-55. <a href="http://dx.doi.org/10.1007/s00018-016-2387-7">doi:10.1007/s00018-016-2387-7</a>. Epub 2016 Oct 3. Review. PubMed PMID: 27699454</p>
