--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
 
 <h1>Pathway highlight: normal CFTR function</h1>
 
-
+<img src="/images/maps/CFTR_WT_v06_Blue.png" width="300"/>
 
 <h1>Publication highlight</h1>
 
