--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
 
 <h1>Pathway highlight: normal CFTR function</h1>
 
-<a href="/maps/"><img src="/images/maps/CFTR_WT_v06_Blue_Cut.png" width="300"/></a>
+<a href="/map/"><img src="/images/maps/CFTR_WT_v06_Blue_Cut.png" width="300"/></a>
 
 <h1>Publication highlight</h1>
 
