--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <p style="font-size:100%;">Welcome to the Cystic Fibrosis Map project (CF-MAP), an effort focused on high-quality description of cystic fibrosis mechanisms and building a predictive computational model based on this description.</p>
 
-<p>UPCOMING EVENT: The <a href="/events">3rd Disease Maps Community Meeting</a> (DMCM2018) is scheduled 21-22 June 2018 in Paris. CF-MAP talk at DMCM2018: “Towards a molecular map of cystic fibrosis mechanisms”.</p>
+<p>UPCOMING EVENT: The <a href="http://disease-maps.org/events">3rd Disease Maps Community Meeting</a> (DMCM2018) is scheduled 21-22 June 2018 in Paris. CF-MAP talk at DMCM2018: “Towards a molecular map of cystic fibrosis mechanisms”.</p>
 
 
 <h1>Pathway highlight: normal CFTR function</h1>
