--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
 
 <h1>Upcoming events:</h1>
 <p>The <a href="https://www.ecfs.eu/greece201815th">ECFS Basic Science Conference scheduled 21-24 March 2018 in Loutraki Korinthias, Greece. This conference is a recognised platform where international speakers, PhD students and postdocs discuss the advances in the field of cystic fibrosis.<p>
-/images/conferences/banner_Greece2018.jpg" wisth="260"
+/images/conferences/banner_Greece2018.jpg" wisth="160"></a>
 <p>The <a href="http://disease-maps.org/events">3rd Disease Maps Community Meeting</a> (DMCM2018) is scheduled 21-22 June 2018 in Paris. CF-MAP talk at DMCM2018: “Towards a molecular map of cystic fibrosis mechanisms”.</p>
 
 <h1>Pathway highlight: normal CFTR function</h1>
