--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@ layout: default
 
 <p style="font-size:100%;">Welcome to the Cystic Fibrosis Map project (CF-MAP), an effort focused on high-quality description of cystic fibrosis mechanisms and building a predictive computational model based on this description.</p>
 
-<h1>Upcoming events:</h1>
+<h1>Upcoming events</h1>
 
-<img src="/images/conferences/banner_Greece2018.jpg" width="760"/>
-<p>The <a href="https://www.ecfs.eu/greece2018">ECFS Basic Science Conference</a> scheduled 21-24 March 2018 in Loutraki Korinthias, Greece. This conference is a recognised platform where international speakers, PhD students and postdocs discuss the advances in the field of cystic fibrosis.<p>
-
+<a href="https://www.ecfs.eu/greece2018"><img src="/images/conferences/banner_Greece2018.jpg" width="760"/></a>
+<p>The <a href="https://www.ecfs.eu/greece2018">ECFS Basic Science Conference</a> is scheduled 21-24 March 2018 in Loutraki Korinthias, Greece. This conference is a recognised platform where international speakers, PhD students and postdocs discuss the advances in the field of cystic fibrosis.<p>
+  
 <p>The <a href="http://disease-maps.org/events">3rd Disease Maps Community Meeting</a> (DMCM2018) is scheduled 21-22 June 2018 in Paris. CF-MAP talk at DMCM2018: “Towards a molecular map of cystic fibrosis mechanisms”.</p>
 
 <h1>Pathway highlight: normal CFTR function</h1>
