--- a/index.html
+++ b/index.html
@@ -2,19 +2,12 @@
 layout: default
 ---
 
-<p style="font-size:100%;">Welcome to the Cystic Fibrosis Map project (CF-MAP), an effort focused on high-quality description of cystic fibrosis mechanisms and building a predictive computational model based on this description.</p>
+<p style="font-size:100%;">Welcome to the SBGN Bricks project, an effort focused on describing recurring basic patterns in biological networks that correspond to such biological processes as metabolic reaction, catalysis, inhibition, protein phosphorylation, complex formation, transcription, translation etc.</p>
 
-<h1>Upcoming events</h1>
+<h1>Brick highlight</h1>
 
-<a href="https://www.ecfs.eu/greece2018"><img src="/images/conferences/banner_Greece2018.jpg" width="760"/></a>
-<p>The <a href="https://www.ecfs.eu/greece2018">ECFS Basic Science Conference</a> is scheduled 21-24 March 2018 in Loutraki Korinthias, Greece. This conference is a recognised platform where international speakers, PhD students and postdocs discuss the advances in the field of cystic fibrosis.<p>
-  
-<p>The <a href="http://disease-maps.org/events">3rd Disease Maps Community Meeting</a> (DMCM2018) is scheduled 21-22 June 2018 in Paris. CF-MAP talk at DMCM2018: “Towards a molecular map of cystic fibrosis mechanisms”.</p>
+<a href="/map/"><img src="/images/maps/image.jpg" width="200"/></a>
 
-<h1>Pathway highlight: normal CFTR function</h1>
+<h1>Related projects</h1>
 
-<a href="/map/"><img src="/images/maps/CFTR_WT_v06_Blue_Cut.png" width="260"/></a>
-
-<h1>Publication highlight</h1>
-
-<p>Farinha CM, Canato S. From the endoplasmic reticulum to the plasma membrane: mechanisms of CFTR folding and trafficking. Cell Mol Life Sci. 2017 Jan;74(1):39-55. <a href="http://dx.doi.org/10.1007/s00018-016-2387-7">doi:10.1007/s00018-016-2387-7</a>. Epub 2016 Oct 3. Review. PubMed PMID: 27699454</p>
+ModelBricks of the Virtual Cell project
