--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<p style="font-size:100%;">Welcome to the SBGN Bricks project, an effort focused on describing recurring basic patterns in biological networks that correspond to such biological processes as metabolic reaction, catalysis, inhibition, protein phosphorylation, complex formation, transcription, translation etc.</p>
+<p style="font-size:100%;">Welcome to the SBGN Bricks project, an effort focused on describing recurring basic patterns in biological networks that correspond to such biological concepts as metabolic reaction, catalysis, inhibition, protein phosphorylation, complex formation, transcription, translation etc.</p>
 
 <h1>Brick highlight</h1>
 
