--- a/index.html
+++ b/index.html
@@ -6,4 +6,4 @@ layout: default
 
 <h2>Brick highlight</h2>
 
-<a href="/map/"><img src="/images/maps/image.jpg" width="200"/></a>
+<a href="/pd/"><img src="../bricks/catalysis/Catalysis-PD01.02-IRR-2x2.png" width="200"/></a>
