--- a/examples/table.html
+++ b/examples/table.html
@@ -1,17 +1,17 @@
 <table>
 	<tr style="font-size:90%;">
 		<td style="text-align:center; font-size:90%;">
-			<img src="../examples/inhibition-4/spec.pd.png" height="350"/>
+			<img src="../examples/inhibition-3/spec.pd.png" height="280"/>
 			<br />
-			<a href="../examples/inhibition-4/spec.pd.sbgn">SBGN-ML</a>&ensp;			<a href="http://web.newteditor.org/?URL=http://sbgnbricks.github.io/examples/inhibition-4/spec.pd.sbgn" target="_blank">Newt</a>
+			<a href="../examples/inhibition-3/spec.pd.sbgn">SBGN-ML</a>&ensp;			<a href="http://web.newteditor.org/?URL=http://sbgnbricks.github.io/examples/inhibition-3/spec.pd.sbgn" target="_blank">Newt</a>
 		</td>
 		<td style="text-align:center; font-size:90%;">
-			<img src="../examples/inhibition-4/spec.af.png" height="350"/>
+			<img src="../examples/inhibition-3/spec.af.png" height="210"/>
 			<br />
-			<a href="../examples/inhibition-4/spec.af.sbgn">SBGN-ML</a>&ensp;			<a href="http://web.newteditor.org/?URL=http://sbgnbricks.github.io/examples/inhibition-4/spec.af.sbgn" target="_blank">Newt</a>
+			<a href="../examples/inhibition-3/spec.af.sbgn">SBGN-ML</a>&ensp;			<a href="http://web.newteditor.org/?URL=http://sbgnbricks.github.io/examples/inhibition-3/spec.af.sbgn" target="_blank">Newt</a>
 		</td>
 	</tr>
 	<tr>
-		<td colspan="2">[Description]</td>
+		<td colspan="2" style="text-align:center; font-size:90%;">[Description]</td>
 	</tr>
 </table>
