--- a/examples/patterns.html
+++ b/examples/patterns.html
@@ -1,23 +1,20 @@
-# Translation Patterns
-            
+<!DOCTYPE html><html lang="en"> <head>   <meta charset="utf-8">   <title>Translation Patterns</title>   <link rel="stylesheet" href="styles.css">   <script src=""></script> </head> <body>   <h1>Translation Rules</h1>
+<ul><li>Green: implemented</li>
+<li>Yellow: partly implemented</li>
+<li>Pink: not yet implemented</li></ul>
 
-            
-- Green: implemented
-- Yellow: partly implemented
-- Pink: not yet implemented
+<h2>Inhibition</h2>
 
-## Inhibition
-
-### By Binding
+<h3>By Binding</h3>
 <table style="background: #FF9E91">
 	<tr style="font-size:90%;">
 		<td style="text-align:center; font-size:90%;">
-			<img src="../examples/inhibition/by_binding/pd.png" height="210"/>
+			<img src="../examples/inhibition/by_binding/pd.png" width="430" />
 			<br />
 			<a href="../examples/inhibition/by_binding/pd.sbgn">SBGN-ML</a>&ensp;			<a href="http://web.newteditor.org/?URL=http://sbgnbricks.github.io/examples/inhibition/by_binding/pd.sbgn" target="_blank">Newt</a>
 		</td>
 		<td style="text-align:center; font-size:90%;">
-			<img src="../examples/inhibition/by_binding/af.png" height="210"/>
+			<img src="../examples/inhibition/by_binding/af.png" width="430" />
 			<br />
 			<a href="../examples/inhibition/by_binding/af.sbgn">SBGN-ML</a>&ensp;			<a href="http://web.newteditor.org/?URL=http://sbgnbricks.github.io/examples/inhibition/by_binding/af.sbgn" target="_blank">Newt</a>
 		</td>
@@ -27,16 +24,16 @@
 	</tr>
 </table>
 
-### By Modification
+<h3>By Modification</h3>
 <table style="background: #FF9E91">
 	<tr style="font-size:90%;">
 		<td style="text-align:center; font-size:90%;">
-			<img src="../examples/inhibition/by_modification/pd.png" height="210"/>
+			<img src="../examples/inhibition/by_modification/pd.png" width="430" />
 			<br />
 			<a href="../examples/inhibition/by_modification/pd.sbgn">SBGN-ML</a>&ensp;			<a href="http://web.newteditor.org/?URL=http://sbgnbricks.github.io/examples/inhibition/by_modification/pd.sbgn" target="_blank">Newt</a>
 		</td>
 		<td style="text-align:center; font-size:90%;">
-			<img src="../examples/inhibition/by_modification/af.png" height="210"/>
+			<img src="../examples/inhibition/by_modification/af.png" width="430" />
 			<br />
 			<a href="../examples/inhibition/by_modification/af.sbgn">SBGN-ML</a>&ensp;			<a href="http://web.newteditor.org/?URL=http://sbgnbricks.github.io/examples/inhibition/by_modification/af.sbgn" target="_blank">Newt</a>
 		</td>
@@ -46,19 +43,38 @@
 	</tr>
 </table>
 
+<h3>By Degradation</h3>
+<table style="background: #FF9E91">
+	<tr style="font-size:90%;">
+		<td style="text-align:center; font-size:90%;">
+			<img src="../examples/inhibition/by_degradation/pd.png" width="430" />
+			<br />
+			<a href="../examples/inhibition/by_degradation/pd.sbgn">SBGN-ML</a>&ensp;			<a href="http://web.newteditor.org/?URL=http://sbgnbricks.github.io/examples/inhibition/by_degradation/pd.sbgn" target="_blank">Newt</a>
+		</td>
+		<td style="text-align:center; font-size:90%;">
+			<img src="../examples/inhibition/by_degradation/af.png" width="430" />
+			<br />
+			<a href="../examples/inhibition/by_degradation/af.sbgn">SBGN-ML</a>&ensp;			<a href="http://web.newteditor.org/?URL=http://sbgnbricks.github.io/examples/inhibition/by_degradation/af.sbgn" target="_blank">Newt</a>
+		</td>
+	</tr>
+	<tr style="line-height: 3em">
+		<td colspan="2" style="text-align:center; font-size:90%;">A dissociates into B and C. This decreases the concentration of A, and as A stimulated reaction D1 to D2, dissociation inhibits this reaction</td>
+	</tr>
+</table>
 
-## Simple Control
 
-### Simple Negative Control
+<h2>Simple Control</h2>
+
+<h3>Simple Negative Control</h3>
 <table style="background: #FFF3BB">
 	<tr style="font-size:90%;">
 		<td style="text-align:center; font-size:90%;">
-			<img src="../examples/simple_control/simple_negative_control/pd.png" height="210"/>
+			<img src="../examples/simple_control/simple_negative_control/pd.png" width="430" />
 			<br />
 			<a href="../examples/simple_control/simple_negative_control/pd.sbgn">SBGN-ML</a>&ensp;			<a href="http://web.newteditor.org/?URL=http://sbgnbricks.github.io/examples/simple_control/simple_negative_control/pd.sbgn" target="_blank">Newt</a>
 		</td>
 		<td style="text-align:center; font-size:90%;">
-			<img src="../examples/simple_control/simple_negative_control/af.png" height="210"/>
+			<img src="../examples/simple_control/simple_negative_control/af.png" width="430" />
 			<br />
 			<a href="../examples/simple_control/simple_negative_control/af.sbgn">SBGN-ML</a>&ensp;			<a href="http://web.newteditor.org/?URL=http://sbgnbricks.github.io/examples/simple_control/simple_negative_control/af.sbgn" target="_blank">Newt</a>
 		</td>
@@ -68,16 +84,16 @@
 	</tr>
 </table>
 
-### Simple Positive Control
+<h3>Simple Positive Control</h3>
 <table style="background: #FFF3BB">
 	<tr style="font-size:90%;">
 		<td style="text-align:center; font-size:90%;">
-			<img src="../examples/simple_control/simple_positive_control/pd.png" height="210"/>
+			<img src="../examples/simple_control/simple_positive_control/pd.png" width="430" />
 			<br />
 			<a href="../examples/simple_control/simple_positive_control/pd.sbgn">SBGN-ML</a>&ensp;			<a href="http://web.newteditor.org/?URL=http://sbgnbricks.github.io/examples/simple_control/simple_positive_control/pd.sbgn" target="_blank">Newt</a>
 		</td>
 		<td style="text-align:center; font-size:90%;">
-			<img src="../examples/simple_control/simple_positive_control/af.png" height="210"/>
+			<img src="../examples/simple_control/simple_positive_control/af.png" width="430" />
 			<br />
 			<a href="../examples/simple_control/simple_positive_control/af.sbgn">SBGN-ML</a>&ensp;			<a href="http://web.newteditor.org/?URL=http://sbgnbricks.github.io/examples/simple_control/simple_positive_control/af.sbgn" target="_blank">Newt</a>
 		</td>
@@ -87,16 +103,16 @@
 	</tr>
 </table>
 
-### Simple Negative Control With Dead End
+<h3>Simple Negative Control With Dead End</h3>
 <table style="background: #C2FFBB">
 	<tr style="font-size:90%;">
 		<td style="text-align:center; font-size:90%;">
-			<img src="../examples/simple_control/simple_negative_control_with_dead_end/pd.png" height="210"/>
+			<img src="../examples/simple_control/simple_negative_control_with_dead_end/pd.png" width="430" />
 			<br />
 			<a href="../examples/simple_control/simple_negative_control_with_dead_end/pd.sbgn">SBGN-ML</a>&ensp;			<a href="http://web.newteditor.org/?URL=http://sbgnbricks.github.io/examples/simple_control/simple_negative_control_with_dead_end/pd.sbgn" target="_blank">Newt</a>
 		</td>
 		<td style="text-align:center; font-size:90%;">
-			<img src="../examples/simple_control/simple_negative_control_with_dead_end/af.png" height="210"/>
+			<img src="../examples/simple_control/simple_negative_control_with_dead_end/af.png" width="430" />
 			<br />
 			<a href="../examples/simple_control/simple_negative_control_with_dead_end/af.sbgn">SBGN-ML</a>&ensp;			<a href="http://web.newteditor.org/?URL=http://sbgnbricks.github.io/examples/simple_control/simple_negative_control_with_dead_end/af.sbgn" target="_blank">Newt</a>
 		</td>
@@ -106,16 +122,16 @@
 	</tr>
 </table>
 
-### Simple Positive Control With Dead End
+<h3>Simple Positive Control With Dead End</h3>
 <table style="background: #C2FFBB">
 	<tr style="font-size:90%;">
 		<td style="text-align:center; font-size:90%;">
-			<img src="../examples/simple_control/simple_positive_control_with_dead_end/pd.png" height="210"/>
+			<img src="../examples/simple_control/simple_positive_control_with_dead_end/pd.png" width="430" />
 			<br />
 			<a href="../examples/simple_control/simple_positive_control_with_dead_end/pd.sbgn">SBGN-ML</a>&ensp;			<a href="http://web.newteditor.org/?URL=http://sbgnbricks.github.io/examples/simple_control/simple_positive_control_with_dead_end/pd.sbgn" target="_blank">Newt</a>
 		</td>
 		<td style="text-align:center; font-size:90%;">
-			<img src="../examples/simple_control/simple_positive_control_with_dead_end/af.png" height="210"/>
+			<img src="../examples/simple_control/simple_positive_control_with_dead_end/af.png" width="430" />
 			<br />
 			<a href="../examples/simple_control/simple_positive_control_with_dead_end/af.sbgn">SBGN-ML</a>&ensp;			<a href="http://web.newteditor.org/?URL=http://sbgnbricks.github.io/examples/simple_control/simple_positive_control_with_dead_end/af.sbgn" target="_blank">Newt</a>
 		</td>
@@ -126,18 +142,18 @@
 </table>
 
 
-## Translation Pattern
+<h2>Translation Pattern</h2>
 
-### Self Stimulation
+<h3>Self Stimulation</h3>
 <table style="background: #C2FFBB">
 	<tr style="font-size:90%;">
 		<td style="text-align:center; font-size:90%;">
-			<img src="../examples/translation_pattern/self_stimulation/pd.png" height="210"/>
+			<img src="../examples/translation_pattern/self_stimulation/pd.png" width="430" />
 			<br />
 			<a href="../examples/translation_pattern/self_stimulation/pd.sbgn">SBGN-ML</a>&ensp;			<a href="http://web.newteditor.org/?URL=http://sbgnbricks.github.io/examples/translation_pattern/self_stimulation/pd.sbgn" target="_blank">Newt</a>
 		</td>
 		<td style="text-align:center; font-size:90%;">
-			<img src="../examples/translation_pattern/self_stimulation/af.png" height="210"/>
+			<img src="../examples/translation_pattern/self_stimulation/af.png" width="430" />
 			<br />
 			<a href="../examples/translation_pattern/self_stimulation/af.sbgn">SBGN-ML</a>&ensp;			<a href="http://web.newteditor.org/?URL=http://sbgnbricks.github.io/examples/translation_pattern/self_stimulation/af.sbgn" target="_blank">Newt</a>
 		</td>
@@ -147,16 +163,16 @@
 	</tr>
 </table>
 
-### Collapsing Equal Name Elements
+<h3>Collapsing Equal Name Elements</h3>
 <table style="background: #C2FFBB">
 	<tr style="font-size:90%;">
 		<td style="text-align:center; font-size:90%;">
-			<img src="../examples/translation_pattern/collapsing_equal_name_elements/pd.png" height="210"/>
+			<img src="../examples/translation_pattern/collapsing_equal_name_elements/pd.png" width="430" />
 			<br />
 			<a href="../examples/translation_pattern/collapsing_equal_name_elements/pd.sbgn">SBGN-ML</a>&ensp;			<a href="http://web.newteditor.org/?URL=http://sbgnbricks.github.io/examples/translation_pattern/collapsing_equal_name_elements/pd.sbgn" target="_blank">Newt</a>
 		</td>
 		<td style="text-align:center; font-size:90%;">
-			<img src="../examples/translation_pattern/collapsing_equal_name_elements/af.png" height="210"/>
+			<img src="../examples/translation_pattern/collapsing_equal_name_elements/af.png" width="430" />
 			<br />
 			<a href="../examples/translation_pattern/collapsing_equal_name_elements/af.sbgn">SBGN-ML</a>&ensp;			<a href="http://web.newteditor.org/?URL=http://sbgnbricks.github.io/examples/translation_pattern/collapsing_equal_name_elements/af.sbgn" target="_blank">Newt</a>
 		</td>
@@ -166,16 +182,16 @@
 	</tr>
 </table>
 
-### Process Is A Positive Influence
+<h3>Process Is A Positive Influence</h3>
 <table style="background: #C2FFBB">
 	<tr style="font-size:90%;">
 		<td style="text-align:center; font-size:90%;">
-			<img src="../examples/translation_pattern/process_is_a_positive_influence/pd.png" height="210"/>
+			<img src="../examples/translation_pattern/process_is_a_positive_influence/pd.png" width="430" />
 			<br />
 			<a href="../examples/translation_pattern/process_is_a_positive_influence/pd.sbgn">SBGN-ML</a>&ensp;			<a href="http://web.newteditor.org/?URL=http://sbgnbricks.github.io/examples/translation_pattern/process_is_a_positive_influence/pd.sbgn" target="_blank">Newt</a>
 		</td>
 		<td style="text-align:center; font-size:90%;">
-			<img src="../examples/translation_pattern/process_is_a_positive_influence/af.png" height="210"/>
+			<img src="../examples/translation_pattern/process_is_a_positive_influence/af.png" width="430" />
 			<br />
 			<a href="../examples/translation_pattern/process_is_a_positive_influence/af.sbgn">SBGN-ML</a>&ensp;			<a href="http://web.newteditor.org/?URL=http://sbgnbricks.github.io/examples/translation_pattern/process_is_a_positive_influence/af.sbgn" target="_blank">Newt</a>
 		</td>
@@ -186,18 +202,18 @@
 </table>
 
 
-## Source-And-Sinks
+<h2>Source-And-Sinks</h2>
 
-### Control Over Sink
+<h3>Control Over Sink</h3>
 <table style="background: #C2FFBB">
 	<tr style="font-size:90%;">
 		<td style="text-align:center; font-size:90%;">
-			<img src="../examples/source-and-sinks/control_over_sink/pd.png" height="210"/>
+			<img src="../examples/source-and-sinks/control_over_sink/pd.png" width="430" />
 			<br />
 			<a href="../examples/source-and-sinks/control_over_sink/pd.sbgn">SBGN-ML</a>&ensp;			<a href="http://web.newteditor.org/?URL=http://sbgnbricks.github.io/examples/source-and-sinks/control_over_sink/pd.sbgn" target="_blank">Newt</a>
 		</td>
 		<td style="text-align:center; font-size:90%;">
-			<img src="../examples/source-and-sinks/control_over_sink/af.png" height="210"/>
+			<img src="../examples/source-and-sinks/control_over_sink/af.png" width="430" />
 			<br />
 			<a href="../examples/source-and-sinks/control_over_sink/af.sbgn">SBGN-ML</a>&ensp;			<a href="http://web.newteditor.org/?URL=http://sbgnbricks.github.io/examples/source-and-sinks/control_over_sink/af.sbgn" target="_blank">Newt</a>
 		</td>
@@ -207,16 +223,16 @@
 	</tr>
 </table>
 
-### Control Over Source
+<h3>Control Over Source</h3>
 <table style="background: #C2FFBB">
 	<tr style="font-size:90%;">
 		<td style="text-align:center; font-size:90%;">
-			<img src="../examples/source-and-sinks/control_over_source/pd.png" height="210"/>
+			<img src="../examples/source-and-sinks/control_over_source/pd.png" width="430" />
 			<br />
 			<a href="../examples/source-and-sinks/control_over_source/pd.sbgn">SBGN-ML</a>&ensp;			<a href="http://web.newteditor.org/?URL=http://sbgnbricks.github.io/examples/source-and-sinks/control_over_source/pd.sbgn" target="_blank">Newt</a>
 		</td>
 		<td style="text-align:center; font-size:90%;">
-			<img src="../examples/source-and-sinks/control_over_source/af.png" height="210"/>
+			<img src="../examples/source-and-sinks/control_over_source/af.png" width="430" />
 			<br />
 			<a href="../examples/source-and-sinks/control_over_source/af.sbgn">SBGN-ML</a>&ensp;			<a href="http://web.newteditor.org/?URL=http://sbgnbricks.github.io/examples/source-and-sinks/control_over_source/af.sbgn" target="_blank">Newt</a>
 		</td>
@@ -226,3 +242,4 @@
 	</tr>
 </table>
 
+ </body></html>
