added links to Newt

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
 <h2>Brick highlight</h2>
 
 <div class="parent">
-    <div class="img"><a href="/pd/"><img src="../bricks/catalysis/Catalysis-PD01.02-IRR-2x2.png"/></a></div>
+    <div class="img"><a href="/pd/"><img src="../bricks/catalysis/Catalysis-PD01-IRR-2x2.png"/></a></div>
     <div class="text"><strong>Catalysis: multiple substrates and products.</strong> The enzyme catalyses an irreversible metabolic process which consumes two substrates S1 and S2 and produces two products P1 and P2.</div>
 </div>
 
